// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HoneybadgerDrop Page Renders correctly with connected address 1`] = `
<div>
  <div
    class="MuiContainer-root-11 makeStyles-root-1 MuiContainer-maxWidthLg-17"
  >
    <div
      class="MuiGrid-root-19 MuiGrid-container-20 MuiGrid-spacing-xs-1-42 MuiGrid-justify-xs-center-37"
    >
      <div
        class="MuiGrid-root-19 makeStyles-headerContainer-2 MuiGrid-item-21 MuiGrid-grid-xs-12-65"
      >
        <div
          class="makeStyles-headerContainer-123"
        >
          <div
            class="makeStyles-headerContent-124"
          >
            <h2
              class="MuiTypography-root-125 MuiTypography-h2-131 MuiTypography-colorTextPrimary-150"
            >
              DIAMOND HANDS
            </h2>
            <h6
              class="MuiTypography-root-125 MuiTypography-subtitle1-136 MuiTypography-colorTextSecondary-151"
            >
              MEME Honeypot pt. II
            </h6>
          </div>
          <div
            class="makeStyles-headerWidgets-122"
          >
            <div
              class="MuiInputBase-root-182 MuiOutlinedInput-root-167 MuiInputBase-colorSecondary-191 MuiOutlinedInput-colorSecondary-168 makeStyles-gasSelector-155 MuiInputBase-adornedStart-186 MuiOutlinedInput-adornedStart-171"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-200"
                focusable="false"
                style="cursor: pointer; font-size: 1.2rem; margin-right: .8rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33 0 1.38 1.12 2.5 2.5 2.5.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
                />
              </svg>
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root-156 MuiSelect-select-157 MuiSelect-selectMenu-160 MuiSelect-outlined-159 MuiInputBase-input-193 MuiOutlinedInput-input-177 MuiInputBase-inputAdornedStart-197 MuiOutlinedInput-inputAdornedStart-180"
                role="button"
                tabindex="0"
              >
                75
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-166"
                tabindex="-1"
                value="standard"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-200 MuiSelect-icon-162 MuiSelect-iconOutlined-165"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-213 MuiOutlinedInput-notchedOutline-176"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-214"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
            <button
              class="MuiButtonBase-root-250 MuiButton-root-221 MuiButton-contained-229 makeStyles-walletButton-220 MuiButton-containedSecondary-231 MuiButton-disableElevation-232"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-222"
              >
                0x1a1a1...a1a1a1a
                <span
                  class="MuiButton-endIcon-246 MuiButton-iconSizeMedium-248"
                >
                  <div
                    class="makeStyles-walletDot-217 makeStyles-greenDot-219"
                  />
                </span>
              </span>
              <span
                class="MuiTouchRipple-root-301"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-19 MuiGrid-container-20 MuiGrid-spacing-xs-5-46 MuiGrid-item-21 MuiGrid-grid-xs-12-65"
      >
        <div
          class="MuiGrid-root-19 makeStyles-centerText-254 MuiGrid-container-20 MuiGrid-item-21 MuiGrid-justify-xs-center-37 MuiGrid-grid-xs-12-65"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-19 MuiGrid-item-21 MuiGrid-grid-xs-12-65 MuiGrid-grid-sm-8-75 MuiGrid-grid-md-7-88"
          >
            <div
              class="MuiPaper-root-258 makeStyles-mainPapers-255 MuiPaper-elevation0-261 MuiPaper-rounded-259"
            >
              <div
                class="MuiGrid-root-19 MuiGrid-container-20 MuiGrid-spacing-xs-1-42"
              >
                <div
                  class="MuiGrid-root-19 MuiGrid-item-21 MuiGrid-grid-xs-12-65"
                >
                  <p
                    class="MuiTypography-root-125 MuiTypography-body1-127"
                  >
                    Redemption Pool Remaining
                  </p>
                </div>
                <div
                  class="MuiGrid-root-19 MuiGrid-item-21 MuiGrid-grid-xs-12-65"
                >
                  <h5
                    class="MuiTypography-root-125 MuiTypography-h5-134"
                  >
                    <span
                      class="MuiSkeleton-root-286 MuiSkeleton-text-287 makeStyles-center-253 MuiSkeleton-pulse-290"
                      style="width: 30%;"
                    />
                  </h5>
                </div>
                <div
                  class="MuiGrid-root-19 MuiGrid-item-21 MuiGrid-grid-xs-12-65"
                >
                  <h6
                    class="MuiTypography-root-125 MuiTypography-subtitle1-136"
                  >
                    <span
                      class="MuiSkeleton-root-286 MuiSkeleton-text-287 makeStyles-center-253 MuiSkeleton-pulse-290"
                      style="width: 30%;"
                    />
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-19 MuiGrid-item-21 MuiGrid-grid-xs-12-65"
                >
                  <h6
                    class="MuiTypography-root-125 MuiTypography-subtitle1-136"
                  >
                    <span
                      class="MuiSkeleton-root-286 MuiSkeleton-text-287 makeStyles-center-253 MuiSkeleton-pulse-290"
                      style="width: 30%;"
                    />
                  </h6>
                </div>
              </div>
            </div>
            <a
              aria-disabled="false"
              aria-label="Learn More"
              class="MuiButtonBase-root-250 MuiButton-root-221 MuiButton-text-223 makeStyles-learnMore-257 MuiButton-textPrimary-224 MuiButton-textSizeSmall-236 MuiButton-sizeSmall-242 MuiButton-fullWidth-244"
              href="https://badgerdao.medium.com/badger-x-meme-nft-honeypot-part-ii-diamond-hands-7111d38b5df4"
              tabindex="0"
              target="_"
            >
              <span
                class="MuiButton-label-222"
              >
                Learn More
              </span>
              <span
                class="MuiTouchRipple-root-301"
              />
            </a>
          </div>
        </div>
        <div
          class="MuiGrid-root-19 MuiGrid-container-20 MuiGrid-item-21 MuiGrid-justify-xs-center-37 MuiGrid-grid-xs-12-65"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-19 makeStyles-holdingsTitle-298 MuiGrid-container-20 MuiGrid-item-21 MuiGrid-grid-xs-12-65"
          >
            <p
              class="MuiTypography-root-125 MuiTypography-body1-127"
              style="width: 100%;"
            >
              Your Holdings
            </p>
          </div>
          <div
            class="MuiGrid-root-19 MuiGrid-container-20 MuiGrid-spacing-xs-8-49 MuiGrid-item-21 MuiGrid-justify-xs-space-between-39 MuiGrid-grid-xs-12-65"
          >
            <div
              class="MuiGrid-root-19 makeStyles-nftContainer-299 MuiGrid-item-21 MuiGrid-grid-xs-12-65 MuiGrid-grid-sm-6-73 MuiGrid-grid-lg-4-99"
            >
              <span
                class="MuiSkeleton-root-286 MuiSkeleton-rect-288 makeStyles-nftSkeleton-300 MuiSkeleton-pulse-290"
                style="width: 100%; height: 450px;"
              />
            </div>
            <div
              class="MuiGrid-root-19 makeStyles-nftContainer-299 MuiGrid-item-21 MuiGrid-grid-xs-12-65 MuiGrid-grid-sm-6-73 MuiGrid-grid-lg-4-99"
            >
              <span
                class="MuiSkeleton-root-286 MuiSkeleton-rect-288 makeStyles-nftSkeleton-300 MuiSkeleton-pulse-290"
                style="width: 100%; height: 450px;"
              />
            </div>
            <div
              class="MuiGrid-root-19 makeStyles-nftContainer-299 MuiGrid-item-21 MuiGrid-grid-xs-12-65 MuiGrid-grid-sm-6-73 MuiGrid-grid-lg-4-99"
            >
              <span
                class="MuiSkeleton-root-286 MuiSkeleton-rect-288 makeStyles-nftSkeleton-300 MuiSkeleton-pulse-290"
                style="width: 100%; height: 450px;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HoneybadgerDrop Page Renders correctly with connected address and a balance of NFTs 1`] = `
<div>
  <div
    class="MuiContainer-root-11 makeStyles-root-1 MuiContainer-maxWidthLg-17"
  >
    <div
      class="MuiGrid-root-19 MuiGrid-container-20 MuiGrid-spacing-xs-1-42 MuiGrid-justify-xs-center-37"
    >
      <div
        class="MuiGrid-root-19 makeStyles-headerContainer-2 MuiGrid-item-21 MuiGrid-grid-xs-12-65"
      >
        <div
          class="makeStyles-headerContainer-123"
        >
          <div
            class="makeStyles-headerContent-124"
          >
            <h2
              class="MuiTypography-root-125 MuiTypography-h2-131 MuiTypography-colorTextPrimary-150"
            >
              DIAMOND HANDS
            </h2>
            <h6
              class="MuiTypography-root-125 MuiTypography-subtitle1-136 MuiTypography-colorTextSecondary-151"
            >
              MEME Honeypot pt. II
            </h6>
          </div>
          <div
            class="makeStyles-headerWidgets-122"
          >
            <div
              class="MuiInputBase-root-182 MuiOutlinedInput-root-167 MuiInputBase-colorSecondary-191 MuiOutlinedInput-colorSecondary-168 makeStyles-gasSelector-155 MuiInputBase-adornedStart-186 MuiOutlinedInput-adornedStart-171"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-200"
                focusable="false"
                style="cursor: pointer; font-size: 1.2rem; margin-right: .8rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33 0 1.38 1.12 2.5 2.5 2.5.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
                />
              </svg>
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root-156 MuiSelect-select-157 MuiSelect-selectMenu-160 MuiSelect-outlined-159 MuiInputBase-input-193 MuiOutlinedInput-input-177 MuiInputBase-inputAdornedStart-197 MuiOutlinedInput-inputAdornedStart-180"
                role="button"
                tabindex="0"
              >
                75
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-166"
                tabindex="-1"
                value="standard"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-200 MuiSelect-icon-162 MuiSelect-iconOutlined-165"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-213 MuiOutlinedInput-notchedOutline-176"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-214"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
            <button
              class="MuiButtonBase-root-250 MuiButton-root-221 MuiButton-contained-229 makeStyles-walletButton-220 MuiButton-containedSecondary-231 MuiButton-disableElevation-232"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-222"
              >
                0x1a1a1...a1a1a1a
                <span
                  class="MuiButton-endIcon-246 MuiButton-iconSizeMedium-248"
                >
                  <div
                    class="makeStyles-walletDot-217 makeStyles-greenDot-219"
                  />
                </span>
              </span>
              <span
                class="MuiTouchRipple-root-301"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-19 MuiGrid-container-20 MuiGrid-spacing-xs-5-46 MuiGrid-item-21 MuiGrid-grid-xs-12-65"
      >
        <div
          class="MuiGrid-root-19 makeStyles-centerText-254 MuiGrid-container-20 MuiGrid-item-21 MuiGrid-justify-xs-center-37 MuiGrid-grid-xs-12-65"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-19 MuiGrid-item-21 MuiGrid-grid-xs-12-65 MuiGrid-grid-sm-8-75 MuiGrid-grid-md-7-88"
          >
            <div
              class="MuiPaper-root-258 makeStyles-mainPapers-255 MuiPaper-elevation0-261 MuiPaper-rounded-259"
            >
              <div
                class="MuiGrid-root-19 MuiGrid-container-20 MuiGrid-spacing-xs-1-42"
              >
                <div
                  class="MuiGrid-root-19 MuiGrid-item-21 MuiGrid-grid-xs-12-65"
                >
                  <p
                    class="MuiTypography-root-125 MuiTypography-body1-127"
                  >
                    Redemption Pool Remaining
                  </p>
                </div>
                <div
                  class="MuiGrid-root-19 MuiGrid-item-21 MuiGrid-grid-xs-12-65"
                >
                  <h5
                    class="MuiTypography-root-125 MuiTypography-h5-134"
                  >
                    <span
                      class="MuiSkeleton-root-286 MuiSkeleton-text-287 makeStyles-center-253 MuiSkeleton-pulse-290"
                      style="width: 30%;"
                    />
                  </h5>
                </div>
                <div
                  class="MuiGrid-root-19 MuiGrid-item-21 MuiGrid-grid-xs-12-65"
                >
                  <h6
                    class="MuiTypography-root-125 MuiTypography-subtitle1-136"
                  >
                    <span
                      class="MuiSkeleton-root-286 MuiSkeleton-text-287 makeStyles-center-253 MuiSkeleton-pulse-290"
                      style="width: 30%;"
                    />
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-19 MuiGrid-item-21 MuiGrid-grid-xs-12-65"
                >
                  <h6
                    class="MuiTypography-root-125 MuiTypography-subtitle1-136"
                  >
                    <span
                      class="MuiSkeleton-root-286 MuiSkeleton-text-287 makeStyles-center-253 MuiSkeleton-pulse-290"
                      style="width: 30%;"
                    />
                  </h6>
                </div>
              </div>
            </div>
            <a
              aria-disabled="false"
              aria-label="Learn More"
              class="MuiButtonBase-root-250 MuiButton-root-221 MuiButton-text-223 makeStyles-learnMore-257 MuiButton-textPrimary-224 MuiButton-textSizeSmall-236 MuiButton-sizeSmall-242 MuiButton-fullWidth-244"
              href="https://badgerdao.medium.com/badger-x-meme-nft-honeypot-part-ii-diamond-hands-7111d38b5df4"
              tabindex="0"
              target="_"
            >
              <span
                class="MuiButton-label-222"
              >
                Learn More
              </span>
              <span
                class="MuiTouchRipple-root-301"
              />
            </a>
          </div>
        </div>
        <div
          class="MuiGrid-root-19 MuiGrid-container-20 MuiGrid-item-21 MuiGrid-justify-xs-center-37 MuiGrid-grid-xs-12-65"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-19 makeStyles-holdingsTitle-298 MuiGrid-container-20 MuiGrid-item-21 MuiGrid-grid-xs-12-65"
          >
            <p
              class="MuiTypography-root-125 MuiTypography-body1-127"
              style="width: 100%;"
            >
              Your Holdings
            </p>
          </div>
          <div
            class="MuiGrid-root-19 MuiGrid-container-20 MuiGrid-spacing-xs-8-49 MuiGrid-item-21 MuiGrid-justify-xs-space-between-39 MuiGrid-grid-xs-12-65"
          >
            <div
              class="MuiGrid-root-19 makeStyles-nftContainer-299 MuiGrid-item-21 MuiGrid-grid-xs-12-65 MuiGrid-grid-sm-6-73 MuiGrid-grid-lg-4-99"
            >
              <span
                class="MuiSkeleton-root-286 MuiSkeleton-rect-288 makeStyles-nftSkeleton-300 MuiSkeleton-pulse-290"
                style="width: 100%; height: 450px;"
              />
            </div>
            <div
              class="MuiGrid-root-19 makeStyles-nftContainer-299 MuiGrid-item-21 MuiGrid-grid-xs-12-65 MuiGrid-grid-sm-6-73 MuiGrid-grid-lg-4-99"
            >
              <span
                class="MuiSkeleton-root-286 MuiSkeleton-rect-288 makeStyles-nftSkeleton-300 MuiSkeleton-pulse-290"
                style="width: 100%; height: 450px;"
              />
            </div>
            <div
              class="MuiGrid-root-19 makeStyles-nftContainer-299 MuiGrid-item-21 MuiGrid-grid-xs-12-65 MuiGrid-grid-sm-6-73 MuiGrid-grid-lg-4-99"
            >
              <span
                class="MuiSkeleton-root-286 MuiSkeleton-rect-288 makeStyles-nftSkeleton-300 MuiSkeleton-pulse-290"
                style="width: 100%; height: 450px;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HoneybadgerDrop Page Renders correctly without connected address 1`] = `
<div>
  <div
    class="MuiContainer-root-11 makeStyles-root-1 MuiContainer-maxWidthLg-17"
  >
    <div
      class="MuiGrid-root-19 MuiGrid-container-20 MuiGrid-spacing-xs-1-42 MuiGrid-justify-xs-center-37"
    >
      <div
        class="MuiGrid-root-19 makeStyles-headerContainer-2 MuiGrid-item-21 MuiGrid-grid-xs-12-65"
      >
        <div
          class="makeStyles-headerContainer-123"
        >
          <div
            class="makeStyles-headerContent-124"
          >
            <h2
              class="MuiTypography-root-125 MuiTypography-h2-131 MuiTypography-colorTextPrimary-150"
            >
              DIAMOND HANDS
            </h2>
            <h6
              class="MuiTypography-root-125 MuiTypography-subtitle1-136 MuiTypography-colorTextSecondary-151"
            >
              MEME Honeypot pt. II
            </h6>
          </div>
          <div
            class="makeStyles-headerWidgets-122"
          >
            <div
              class="MuiInputBase-root-182 MuiOutlinedInput-root-167 MuiInputBase-colorSecondary-191 MuiOutlinedInput-colorSecondary-168 makeStyles-gasSelector-155 MuiInputBase-adornedStart-186 MuiOutlinedInput-adornedStart-171"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-200"
                focusable="false"
                style="cursor: pointer; font-size: 1.2rem; margin-right: .8rem;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19.77 7.23l.01-.01-3.72-3.72L15 4.56l2.11 2.11c-.94.36-1.61 1.26-1.61 2.33 0 1.38 1.12 2.5 2.5 2.5.36 0 .69-.08 1-.21v7.21c0 .55-.45 1-1 1s-1-.45-1-1V14c0-1.1-.9-2-2-2h-1V5c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v16h10v-7.5h1.5v5c0 1.38 1.12 2.5 2.5 2.5s2.5-1.12 2.5-2.5V9c0-.69-.28-1.32-.73-1.77zM12 10H6V5h6v5zm6 0c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z"
                />
              </svg>
              <div
                aria-haspopup="listbox"
                class="MuiSelect-root-156 MuiSelect-select-157 MuiSelect-selectMenu-160 MuiSelect-outlined-159 MuiInputBase-input-193 MuiOutlinedInput-input-177 MuiInputBase-inputAdornedStart-197 MuiOutlinedInput-inputAdornedStart-180"
                role="button"
                tabindex="0"
              >
                75
              </div>
              <input
                aria-hidden="true"
                class="MuiSelect-nativeInput-166"
                tabindex="-1"
                value="standard"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-200 MuiSelect-icon-162 MuiSelect-iconOutlined-165"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-213 MuiOutlinedInput-notchedOutline-176"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-214"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
            <button
              class="MuiButtonBase-root-250 MuiButton-root-221 MuiButton-contained-229 makeStyles-walletButton-220 MuiButton-containedSecondary-231 MuiButton-disableElevation-232"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-222"
              >
                Click to connect
                <span
                  class="MuiButton-endIcon-246 MuiButton-iconSizeMedium-248"
                >
                  <div
                    class="makeStyles-walletDot-217 makeStyles-redDot-218"
                  />
                </span>
              </span>
              <span
                class="MuiTouchRipple-root-286"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-19 MuiGrid-container-20 MuiGrid-spacing-xs-5-46 MuiGrid-item-21 MuiGrid-grid-xs-12-65"
      >
        <div
          class="MuiGrid-root-19 makeStyles-centerText-254 MuiGrid-container-20 MuiGrid-item-21 MuiGrid-justify-xs-center-37 MuiGrid-grid-xs-12-65"
          style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
        >
          <div
            class="MuiGrid-root-19 MuiGrid-item-21 MuiGrid-grid-xs-12-65 MuiGrid-grid-sm-8-75 MuiGrid-grid-md-7-88"
          >
            <div
              class="MuiPaper-root-258 makeStyles-mainPapers-255 MuiPaper-elevation0-261 MuiPaper-rounded-259"
            >
              <div
                class="MuiGrid-root-19 MuiGrid-container-20 MuiGrid-spacing-xs-1-42"
              >
                <div
                  class="MuiGrid-root-19 MuiGrid-item-21 MuiGrid-grid-xs-12-65"
                >
                  <p
                    class="MuiTypography-root-125 MuiTypography-body1-127"
                  >
                    Redemption Pool Remaining
                  </p>
                </div>
                <div
                  class="MuiGrid-root-19 MuiGrid-item-21 MuiGrid-grid-xs-12-65"
                >
                  <button
                    class="MuiButtonBase-root-250 MuiButton-root-221 MuiButton-contained-229 makeStyles-redeemButton-256 MuiButton-containedPrimary-230"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-222"
                    >
                      Check Rewards
                    </span>
                    <span
                      class="MuiTouchRipple-root-286"
                    />
                  </button>
                </div>
              </div>
            </div>
            <a
              aria-disabled="false"
              aria-label="Learn More"
              class="MuiButtonBase-root-250 MuiButton-root-221 MuiButton-text-223 makeStyles-learnMore-257 MuiButton-textPrimary-224 MuiButton-textSizeSmall-236 MuiButton-sizeSmall-242 MuiButton-fullWidth-244"
              href="https://badgerdao.medium.com/badger-x-meme-nft-honeypot-part-ii-diamond-hands-7111d38b5df4"
              tabindex="0"
              target="_"
            >
              <span
                class="MuiButton-label-222"
              >
                Learn More
              </span>
              <span
                class="MuiTouchRipple-root-286"
              />
            </a>
          </div>
        </div>
        
      </div>
    </div>
  </div>
</div>
`;
